--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -78,9 +78,9 @@
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=0; i<5; i++) { %>
-            <input type="file" name="img" class="form-control-file mb-2">
-            <% if (i === 0) { %>
+            <% for(let i=1; i<=5; i++) { %>
+            <input type="file" name="img_<%= i%>" class="form-control-file mb-2">
+            <% if (i == 0) { %>
             <div class="red">상품리스트에 노출되는 대표 이미지 입니다. 필수로 넣어주세요.</div>
             <hr>
             <% } %>
@@ -90,8 +90,8 @@
         <tr>
           <td>상세내용 첨부</td>
           <td>
-            <% for(let i=0; i<2; i++) { %>
-            <input type="file" name="detail" class="form-control-file mb-2">
+            <% for(let i=1; i<=2; i++) { %>
+            <input type="file" name="detail_<%= i%>" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
