--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/css/jstree/style.min.css">
 <section class="prd-wrapper wrapper form-wrapper">
   <h4 class="title bullet my-2">상품 등록</h4>
-  <form action="<%= goPath %>" method="POST" name="prdCreateForm" enctype="multipart/form-data">
+  <form action="<%= goPath %>" method="POST"  name="prdCreateForm" enctype="multipart/form-data">
     <input type="hidden" name="cate">
     <table class="table border-bottom">
       <tbody>
@@ -65,8 +65,7 @@
         <tr>
           <td class="title">요약설명</td>
           <td>
-            <textarea name="summary" class="form-control" placeholder="내용을 입력하세요."
-              style="min-height: 200px;"></textarea>
+            <textarea name="summary" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"></textarea>
           </td>
         </tr>
         <tr>
@@ -78,20 +77,20 @@
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=1; i<=5; i++) { %>
-            <input type="file" name="img_<%= i%>" class="form-control-file mb-2">
-            <% if (i == 0) { %>
-            <div class="red">상품리스트에 노출되는 대표 이미지 입니다. 필수로 넣어주세요.</div>
-            <hr>
-            <% } %>
+            <% for(let i=1; i<=5; i++) { %> 
+              <input type="file" name="img_<%= i %>" class="form-control-file mb-2">
+              <% if (i === 1) { %>
+                <div class="red">상품리스트에 노출되는 대표 이미지 입니다. 필수로 넣어주세요.</div>
+                <hr>
+              <% } %>
             <% } %>
           </td>
         </tr>
         <tr>
           <td>상세내용 첨부</td>
           <td>
-            <% for(let i=1; i<=2; i++) { %>
-            <input type="file" name="detail_<%= i%>" class="form-control-file mb-2">
+            <% for(let i=1; i<=2; i++) { %> 
+              <input type="file" name="detail_<%= i %>" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
