--- a/views/admin/prd/prd-update.ejs
+++ b/views/admin/prd/prd-update.ejs
@@ -4,12 +4,12 @@
 <link rel="stylesheet" href="/css/jstree/style.min.css">
 <section class="prd-wrapper wrapper update-wrapper">
   <h4 class="title bullet my-2">상품 수정</h4>
-  <form action="<%= goPath %>" method="POST"  name="prdCreateForm" enctype="multipart/form-data">
+  <form action="<%= goPath %>" method="POST" name="prdCreateForm" enctype="multipart/form-data">
     <input type="hidden" name="cate">
     <input type="hidden" name="type" value="update">
     <input type="hidden" name="id" value="<%= prd.id %>">
     <% for(let v of goLists) { %>
-      <input type="hidden" name="<%= v.key %>" value="<%= v.value %>">
+    <input type="hidden" name="<%= v.key %>" value="<%= v.value %>">
     <% } %>
     <table class="table border-bottom">
       <tbody>
@@ -48,13 +48,15 @@
         <tr>
           <td class="title">소비자가격</td>
           <td class="content">
-            <input type="number" name="priceOrigin" class="form-control small" placeholder="소비자가격" value="<%= prd.priceOrigin %>">
+            <input type="number" name="priceOrigin" class="form-control small" placeholder="소비자가격"
+              value="<%= prd.priceOrigin %>">
           </td>
         </tr>
         <tr>
           <td class="title">판매가격</td>
           <td class="content">
-            <input type="number" name="priceSale" class="form-control small" placeholder="판매가격" value="<%= prd.priceSale %>">
+            <input type="number" name="priceSale" class="form-control small" placeholder="판매가격"
+              value="<%= prd.priceSale %>">
           </td>
         </tr>
         <tr>
@@ -70,7 +72,8 @@
         <tr>
           <td class="title">요약설명</td>
           <td>
-            <textarea name="summary" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"><%= prd.summary %></textarea>
+            <textarea name="summary" class="form-control" placeholder="내용을 입력하세요."
+              style="min-height: 200px;"><%= prd.summary %></textarea>
           </td>
         </tr>
         <tr>
@@ -82,34 +85,40 @@
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=0; i<5; i++) { %> 
-              <% if(prd.imgs[i]) { %>
-                  <div class="file-wrap">
-                  <% let { thumbSrc, name, id, type } = prd.imgs[i]; %>
-                    <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
-                    <div class="file"><%= name %></div>
-                    <button type="button" data-name="img <%= (i+1) %>" class="btn btn-sm btn-danger" data-idx="<%= id %>" onclick="onDeleteFile('<%= id %>', this)">삭제</button>
-                  </div>
-              <% } else { %>
-                <input type="file" name="img <%= (i+1) %>" class="form-control-file mb-2">
-              <% } %>
+            <% for(let i=1; i<=5; i++) { %>
+              <div class="file-wrap">
+                <% let idx = _.findIndex(prd.imgs, v => v.fieldNum == i && v.type == 'I') %>
+                <% if(idx > -1) { %>
+                  <% let { thumbSrc, name, id, type, fieldNum } = prd.imgs[idx]; %>
+                  <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
+                  <div class="file"><%= name %></div>
+                  <button type="button" data-name="img_<%= i %>" class="btn btn-sm btn-danger" data-idx="<%= id %>"
+                    onclick="onDeleteFile('<%= id %>', this)">삭제</button>
+                <% } else { %>
+                  <input type="file" name="img_<%= i %>" class="form-control-file my-2">
+                <% } %>
+                <% if (i === 1) { %>
+                  <div class="red w-100 mt-2">상품리스트에 노출되는 대표 이미지 입니다. 필수로 넣어주세요.</div>
+                <% } %>
+              </div>
             <% } %>
           </td>
         </tr>
         <tr>
           <td>상세내용 첨부</td>
           <td>
-            <% for(let i=0; i<2; i++) { %> 
-              <% if(prd.details[i]) { %>,
-                  <div class="file-wrap">
-                  <% let { thumbSrc, name, id, type } = prd.details[i]; %>
-                    <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
-                    <div class="file"><%= name %></div>
-                    <button type="button" data-name="detail <%= (i+1) %>" class="btn btn-sm btn-danger" data-idx="<%= id %>" onclick="onDeleteFile('<%= id %>', this)">삭제</button>
-                  </div>
-              <% } else { %>
-                <input type="file" name="detail <%= (i+1) %>" class="form-control-file mb-2">
-              <% } %>
+            <% for(let i=1; i<=2; i++) { %>
+              <div class="file-wrap">
+              <% let idx = _.findIndex(prd.details, v => v.fieldNum == i && v.type == 'F') %>
+                <% if(idx > -1) { %>
+                  <% let { thumbSrc, name, id, type, fieldNum } = prd.details[idx]; %>
+                  <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
+                  <div class="file"><%= name %></div>
+                  <button type="button" data-name="detail_<%= i %>" class="btn btn-sm btn-danger" data-idx="<%= id %>" onclick="onDeleteFile('<%= id %>', this)">삭제</button>
+                <% } else { %>
+                  <input type="file" name="detail_<%= i %>" class="form-control-file my-2">
+                <% } %>
+              </div>
             <% } %>
           </td>
         </tr>
@@ -132,9 +141,9 @@
 <script src="/js/axios.min.js"></script>
 <script src="/js/jstree.min.js"></script>
 <script>
-  var cateArr = [];
-  <% for(let v of cate) { %>
-    cateArr.push('<%= v %>');
+  var cateArr = []; 
+  <% for (let v of cate) { %>
+    cateArr.push('<%= v %>'); 
   <% } %>
 </script>
 <script src="/js/<%= currents[1] %>/<%= currents[1] %>-update.js"></script>
