--- a/views/admin/order/order-form.ejs
+++ b/views/admin/order/order-form.ejs
@@ -16,7 +16,7 @@
         <tr>
           <td class="title">주문자</td>
           <td class="content">
-            <a href="/<%= currents[0] %>/user/1">booldook / 임덕규 / 010-8332-8040</a>
+            <a href="/<%= currents[0] %>/user/1">woojungyang / 우정양 / 010-9477-8896</a>
           </td>
         </tr>
         <tr>
