--- a/views/admin/order/order-list.ejs
+++ b/views/admin/order/order-list.ejs
@@ -25,7 +25,7 @@
         </td>
         <td>
           <a href="/<%= currents[0] %>/user?id=1">
-            booldook
+            woojungyang
           </a>
         </td>
         <td class="text-left">
