--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -18,12 +18,17 @@
       </tr>
     </thead>
     <tbody>
-      <%
-      let i =0;
-        for(let v of lists) {
-          %>
-      <tr>
-        <td><%= totalRecord - (page-1)*5 - i++%></td>
+    <% let i = 0; %>
+      <% for(let v of lists) { %>
+        <% 
+        let num = (sort === 'desc')
+          ? totalRecord - (page - 1) * 5 - i++
+          : (page - 1) * 5 + ++i
+        %> 
+        <tr>
+          <td>
+            <%= num %>
+          </td>
         <td class="text-left">
           <a href="<%= goPath %>/<%= v.id %>?<%= goQuery %>"><%= v.title %></a>
         </td>
