--- a/views/board/gallery-update.ejs
+++ b/views/board/gallery-update.ejs
@@ -11,35 +11,36 @@
         <tr>
           <td class="title" style="width: 15%;">제목</td>
           <td class="content">
-            <input type="text" name="title" class="form-control" placeholder="제목">
+            <input type="text" name="title" class="form-control" placeholder="제목" value="<%= list.title %>">
           </td>
         </tr>
         <tr>
           <td class="title">작성자</td>
           <td class="content">
-            <input type="text" name="writer" class="form-control" placeholder="작성자">
+            <input type="text" name="writer" class="form-control" placeholder="작성자" value="<%= list.writer %>">
           </td>
         </tr>
         <tr>
           <td colspan="2">
             <textarea name="content" class="form-control" placeholder="내용을 입력하세요."
-              style="min-height: 200px;"></textarea>
+              style="min-height: 200px;"><%= list.content %></textarea>
           </td>
         </tr>
         <tr>
           <td>이미지 첨부</td>
           <td>
             <% for(let i=0; i<useImg; i++) { %>
+            <% if(list.imgs[i] && list.imgs[i].type === 'I') { %>
             <div class="file-wrap">
-              <% if(list.files[i] && list.files[i].type === 'I') { %>
-              <% let { thumbSrc, name, id, type } = list.files[i]; %>
+              <% let { thumbSrc, name, id, type } = list.imgs[i]; %>
               <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
               <div class="file"><%= name %></div>
               <button type="button" data-name="img" class="btn btn-sm btn-danger" data-idx="<%= id %>"
                 onclick="onDeleteFile('<%= id %>', this)">삭제</button>
-              <% } %>
             </div>
+            <% } else { %>
             <input type="file" name="img" class="form-control-file mb-2">
+            <% } %>
             <% } %>
           </td>
         </tr>
@@ -47,15 +48,16 @@
           <td>파일 첨부</td>
           <td>
             <% for(let i=0; i<useFile; i++) { %>
+            <% if(list.files[i] && list.files[i].type === 'F') { %>
             <div class="file-wrap">
-              <% if(list.files[i] && list.files[i].type === 'F') { %>
               <% let { name, id, type } = list.files[i]; %>
               <div class="file"><%= name %></div>
               <button type="button" data-name="pds" class="btn btn-sm btn-danger"
                 onclick="onDeleteFile('<%= id %>', this)">삭제</button>
-              <% } %>
             </div>
+            <% } else { %>
             <input type="file" name="pds" class="form-control-file mb-2">
+            <% } %>
             <% } %>
           </td>
         </tr>
