--- a/views/admin/auth/login.ejs
+++ b/views/admin/auth/login.ejs
@@ -13,7 +13,7 @@
               관리자 아이디
             </td>
             <td class="content">
-              <input type="text" name="userid" class="form-control" placeholder="아이디" autofocus value="demoUser">
+              <input type="text" name="userid" class="form-control" placeholder="아이디" value="demoUser">
             </td>
           </tr>
           <!-- 패스워드 -->
@@ -22,7 +22,7 @@
               패스워드
             </td>
             <td class="content">
-              <input type="password" name="userpw" class="form-control" placeholder="패스워드" autofocus value="111111">
+              <input type="password" name="userpw" class="form-control" placeholder="패스워드" value="111111" autofocus>
             </td>
           </tr>
         </tbody>
