--- a/public/scss/admin/admin-prd.scss
+++ b/public/scss/admin/admin-prd.scss
@@ -15,7 +15,7 @@
     .modal-wrap {
       width: 50%;
       min-width: 300px;
-      height: 90%;
+      height: 100%;
       border: 2px solid $dark-color;
       background-color: white;
       overflow: auto;
@@ -24,6 +24,7 @@
       #jstreeWrap {
         margin-top: 1em;
         width: 90%;
+        overflow-y: scroll;
         flex-grow: 1;
       }
     }
