--- a/views/admin/color/color-list.ejs
+++ b/views/admin/color/color-list.ejs
@@ -1,16 +1,15 @@
 <%- include('../../inc/head.ejs') %>
 <%- include('../../inc/header.ejs') %>
-<link rel="stylesheet" href="/css/admin-color.css">
 <section class="color-wrapper list-wrapper wrapper">
   <ul>
-    <%- include('./color-form.ejs', { color: '#333333', method: 'POST', id: '',name:""}) %>
+    <%- include('./color-form.ejs', { color: '#333333', name: '', id: '' }) %>
     <% 
       for(let v of list) { 
-        let value = {color: v.code, method: 'PUT', id: v.id, name:v.name }
+        let value = { color: v.code, method: 'PUT', id: v.id, name: v.name }
     %>
       <%- include('./color-form.ejs', value) %>
     <% } %>
   </ul>
-</section> 
+</section>
 <script src="/js/color/color.js"></script>
 <%- include('../../inc/foot.ejs') %>
