데이터 베이스 정리

--- a/public/scss/admin/admin-prd.scss
+++ b/public/scss/admin/admin-prd.scss
@@ -6,6 +6,35 @@
   .red {
     color: red;
   }
+  .section-wrap {
+    @include flex;
+    label {
+      @include flex($v: center);
+      margin-right: 1.5em;
+      input {
+        margin-right: 0.325em;
+      }
+      .box {
+        padding: 0.25em 0.5em;
+        border-radius: 5px;
+      }
+    }
+  }
+  .color-wrap {
+    @include flex($w: wrap);
+    label {
+      @include flex($v: center);
+      margin-right: 1.5em;
+      input {
+        margin-right: 0.325em;
+      }
+      .circle {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+      }
+    }
+  }
   .modal-wrapper {
     @include flex($h: center, $v: center);
     @include layer($p: fixed, $l: 0, $t: 0, $i: 99);
@@ -17,7 +46,7 @@
       min-width: 300px;
       height: 100%;
       border: 2px solid $dark-color;
-      background-color: white;
+      background-color: #fff;
       overflow: auto;
       @include flex($h: center, $v: center);
       @include flexCol;
@@ -48,7 +77,7 @@
       td {
         vertical-align: middle;
         &:nth-child(1) {
-          width: 10%;
+          width: 90px;
         }
         &:nth-child(2) {
           width: 100px;
@@ -63,17 +92,16 @@
           width: 160px;
         }
         .price-sale {
-          font-size: 1.25em;
+          font-size: 1.125em;
           color: red;
         }
         .price-ori {
-          font-size: 1.25em;
           color: #777;
         }
       }
       td.td-icon {
-        height: 80px;
         padding: 0.25em;
+        height: 80px;
         img {
           max-width: 100%;
           max-height: 100%;
@@ -84,7 +112,6 @@
   &.update-wrapper {
     .file-wrap {
       @include flex($v: flex-end, $w: wrap);
-      align-items: flex-end;
       margin-bottom: 0.5em;
       padding-bottom: 0.5em;
       border-bottom: 1px dotted #ccc;
