--- a/views/board/gallery-form.ejs
+++ b/views/board/gallery-form.ejs
@@ -13,7 +13,7 @@
         <tr>
           <td class="title">작성자</td>
           <td class="content">
-            <input type="text" name="writer" class="form-control" placeholder="작성자" value="<%= user.username %>">>
+            <input type="text" name="writer" class="form-control" placeholder="작성자" value="<%= user.username %>">
           </td>
         </tr>
         <tr>
